@@ -6,9 +6,9 @@ dependencies[] = page_manager
 core = 7.x
 files[] = panels_everywhere.module
 
-; Information added by Drupal.org packaging script on 2014-09-30
-version = "7.x-1.0-rc1+38-dev"
+; Information added by Drupal.org packaging script on 2015-01-02
+version = "7.x-1.0-rc1+40-dev"
 core = "7.x"
 project = "panels_everywhere"
-datestamp = "1412039676"
+datestamp = "1420231095"
 
