@@ -21,6 +21,6 @@
 <?php if (!empty($tabs) && (!empty($tabs['#primary']) || !empty($tabs['#secondary']))): ?>
   <div class="tabs"><?php print render($tabs); ?></div>
 <?php endif; ?>
-<?php print $action_links; ?>
-<?php print $messages; ?>
-<?php print $help; ?>
+<?php if (!empty($action_links)): ?><?php print $action_links; ?><?php endif; ?>
+<?php if (!empty($messages)): ?><?php print $messages; ?><?php endif; ?>
+<?php if (!empty($help)): ?><?php print $help; ?><?php endif; ?>
