@@ -14,9 +14,9 @@ files[] = xmlsitemap.test
 recommends[] = robotstxt
 configure = admin/config/search/xmlsitemap
 
-; Information added by Drupal.org packaging script on 2014-12-05
-version = "7.x-2.1+2-dev"
+; Information added by Drupal.org packaging script on 2015-01-02
+version = "7.x-2.1+4-dev"
 core = "7.x"
 project = "xmlsitemap"
-datestamp = "1417748882"
+datestamp = "1420231085"
 
