@@ -7,9 +7,9 @@ dependencies[] = i18n
 files[] = xmlsitemap_i18n.module
 files[] = xmlsitemap_i18n.test
 
-; Information added by Drupal.org packaging script on 2014-12-05
-version = "7.x-2.1+2-dev"
+; Information added by Drupal.org packaging script on 2015-01-02
+version = "7.x-2.1+4-dev"
 core = "7.x"
 project = "xmlsitemap"
-datestamp = "1417748882"
+datestamp = "1420231085"
 
