@@ -8,9 +8,9 @@ files[] = xmlsitemap_menu.module
 files[] = xmlsitemap_menu.install
 files[] = xmlsitemap_menu.test
 
-; Information added by Drupal.org packaging script on 2014-12-05
-version = "7.x-2.1+2-dev"
+; Information added by Drupal.org packaging script on 2015-01-02
+version = "7.x-2.1+4-dev"
 core = "7.x"
 project = "xmlsitemap"
-datestamp = "1417748882"
+datestamp = "1420231085"
 
